# motion-planning-cpp

./: .gitconfig  .gitignore  CMakeLists.txt  README.md  add_block  add_cu  gpu_profile.sh  run_docker.sh  test_cpp.cpp  test_cuda.cu
.devcontainer/: Dockerfile  devcontainer.json  makefile
cuda-resources/: add.cpp  add.cu  add_block.cu  test_cuda.cu
include/motion-planning/: map.h  motion_planner.h  robot.h  simulator.h
include/motion-planning/algorithms/: base_algorithm.h
include/motion-planning/algorithms/cuda/: base_algorithm_cuda.h
src/: main.cpp  map.cpp  motion_planner.cpp  robot.cpp  route_planner.cpp
src/algorithms/: base_algorithm.cpp
tests/: test_map.cpp  test_robot.cpp
